forgot to add those twitter and github links

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@ title: Mainpage
     		<section class="content">
     		  <h1>Dunphtastic</h1>
           <div class="sub-title">Using my powers for good.</div>
+          <a href="https://www.twitter.com/dunphtastic">Twitter</a>
+          &middot;
+          <a href="http://www.github.com/markdunphy">GitHub</a>
     		</section>
     		<ul class="entries">
     		{% for post in paginator.posts %}
