--- a/index.html
+++ b/index.html
@@ -1,32 +1,29 @@
 ---
 layout: default
-title: Dunphtastic
+title: Mainpage
 ---
 <!-- Content
     ================================================== -->
+  <div class="top-strip"></div>
   <div class="content">
     <main class="container">
     	<div class="row-fluid">
     		<section class="content">
     		  <h1>Dunphtastic</h1>
-          <div class="sub-title">Using my powers for good.</div>
-          <a href="https://www.twitter.com/dunphtastic">Twitter</a>
-          &middot;
-          <a href="http://www.github.com/markdunphy">GitHub</a>
     		</section>
     		<ul class="entries">
     		{% for post in paginator.posts %}
     		  <li>
     		    <a href="{{ post.url }}">
+                      <span>{{ post.date | date: "%d %B %Y" }}</span>
     		        <h3>{{ post.title }}</h3>
-                <time>{{ post.date | date: "%d %B %Y" }}</time>
-                <div>{{ post.content |truncatehtml | truncatewords: 30 }}</div>
+                      <div>{{ post.content |truncatehtml | truncatewords: 30 }}</div>
     		    </a>
     		  </li>
     		{% endfor %}
     		</ul>
     	</div>
-      
+      <hr>
       <div id="post-pagination">
         {% if paginator.previous_page %}
         <p class="prev">
@@ -47,7 +44,7 @@ title: Dunphtastic
             {% if paginator.page == 1 %}
 <!--             <span class="current-page">1</span> -->
             {% else %}
-<!--             <a href="/">1</a> -->
+            <a href="/">1</a>
             {% endif %}
           </li>
 
